Overflow, empty name, and current file fixes

--- a/src/components/Modal/ModalAddEntry/ModalAddEntry.css
+++ b/src/components/Modal/ModalAddEntry/ModalAddEntry.css
@@ -145,6 +145,9 @@
 
 .modaladdentry-path-dropdown-label {
   line-height: 1.8;
+  direction: rtl;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .modaladdentry-path-dropdown-caret {
